thread added to remove future tasks which are done status.